--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.0 <date>2023</date>
+                <edition>v 1.1.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-03-01T17:01:02.079Z" user="martina-cotter">01/03/2023 17:01:02</note>
+        <note type="lastUpdated" date-time="2023-03-27T15:16:37.628Z" user="admin">27/03/2023 15:16:37</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -109,6 +109,7 @@
           <note type="updated" update="text-version" value="1.0.3" date-time="2023-02-11T18:04:12.06Z" user="andre">glossary matching revised - Activated in CG</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2023-02-17T12:00:56.247Z" user="martina-cotter">Made updates to appendix, and other updates to translation.</note>
           <note type="updated" update="text-version" value="1.1.0" date-time="2023-02-20T20:26:27.996Z" user="celso">Finalized formatting changes</note>
+          <note type="updated" update="text-version" value="1.1.1" date-time="2023-03-27T15:16:34.71Z" user="celso">added custom milestones at 1.14 according to new markup attributes</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -609,35 +610,35 @@
           
             <milestone unit="chunk" xml:id="UT22084-072-010-90"/>
           <p tid="42">So said the Blessed One. After the Sugata said this, the Teacher spoke further:</p>
-          <!--<milestone unit="chunk" xml:id="UT22084-072-010-91"/>-->
+          <milestone unit="chunk" xml:id="UT22084-072-010-91" n="14.1"/>
           <lg tid="43">
             <l>“Alas, conditioned states are impermanent, subject to arising and decaying.</l>
             <l>Having arisen, they are sure to be destroyed; happiness is to bring them to rest.
                 [1]<note place="end" xml:id="UT22084-072-010-92"> UV 1.3.</note>
                         </l>
           </lg>
-          <!--<milestone unit="chunk" xml:id="UT22084-072-010-93"/>-->
+          <milestone unit="chunk" xml:id="UT22084-072-010-93" n="14.2"/>
           <lg tid="44">
             <l>“What joy, what pleasure is there in a conflagration?</l>
             <l>You dwell having entered into darkness—why do you not seek for a lamp? [2]<note place="end" xml:id="UT22084-072-010-94"> UV 1.4. This verse is not present in the
                 Sanskrit witnesses.</note>
                         </l>
           </lg>
-          <!--<milestone unit="chunk" xml:id="UT22084-072-010-95"/>-->
+          <milestone unit="chunk" xml:id="UT22084-072-010-95" n="14.3"/>
           <lg tid="45">
             <l>“Just as clay pots that are made by the potter</l>
             <l>All end in destruction, so it is with the lives of beings. [3]<note place="end" xml:id="UT22084-072-010-96"> UV 1.12 (with slight differences). This verse is not
                 present in the Tibetan. </note>
                         </l>
           </lg>
-          <!--<milestone unit="chunk" xml:id="UT22084-072-010-97"/>-->
+          <milestone unit="chunk" xml:id="UT22084-072-010-97" n="14.4"/>
           <lg tid="46">
             <l>“Just as ripe fruit is forever in danger of falling,</l>
             <l>So it is with beings born of conditioned states—always afraid of death. [4]<note place="end" xml:id="UT22084-072-010-98"> UV 1.11 (with slight differences). This
                 verse is not present in the Tibetan.</note>
                         </l>
           </lg>
-          <!--<milestone unit="chunk" xml:id="UT22084-072-010-99"/>-->
+          <milestone unit="chunk" xml:id="UT22084-072-010-99" n="14.5"/>
           <lg tid="47">
             <l>“All that is accumulated is exhausted in the end; what is elevated falls in the
               end.</l>
