--- a/translations/kangyur/translations/072-012_toh312,628,1093-the_mahasutra_entering_the_city_of_vaisali.xml
+++ b/translations/kangyur/translations/072-012_toh312,628,1093-the_mahasutra_entering_the_city_of_vaisali.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.26 <date>2022</date>
+                <edition>v 1.1.27 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -82,7 +82,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T16:59:56.369Z" user="celso">18/01/2023 16:59:56</note>
+                <note type="lastUpdated" date-time="2023-03-28T21:36:37.422Z" user="admin">28/03/2023 21:36:37</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-02T09:12:16.589Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-04-02T09:12:16.589Z" user="line-tofte">2.e</note>
             
@@ -112,7 +112,7 @@
     <note type="updated" update="text-version" value="1.1.19" date-time="2021-03-17T19:55:39.959Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
     <note type="updated" update="text-version" value="1.1.20" date-time="2021-04-22T15:49:49.322Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing</note>
                 <note type="updated" update="text-version" value="1.1.21" date-time="2021-05-01T03:11:48.59Z" user="celso">activated pending links to 1-6</note>
-    <note type="updated" update="text-version" value="1.1.22" date-time="2021-09-23T20:02:57.018Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.23" date-time="2022-03-02T19:30:59.857Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.1.24" date-time="2022-03-22T12:38:42.569Z" user="martina-cotter">Updated cross reference with Toh 313.</note>    <note type="updated" update="text-version" value="1.1.25" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.26" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.1.22" date-time="2021-09-23T20:02:57.018Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.23" date-time="2022-03-02T19:30:59.857Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.1.24" date-time="2022-03-22T12:38:42.569Z" user="martina-cotter">Updated cross reference with Toh 313.</note>    <note type="updated" update="text-version" value="1.1.25" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.26" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.1.27" date-time="2023-03-28T21:36:34.563Z" user="celso">fixed block quote</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -199,8 +199,10 @@
                     <p tid="117">Then comes the episode of quelling the epidemic in Vaiśālī, just as
                         it is told in this mahāsūtra, except that in <title xml:lang="en">The Chapter on Medicines</title> Ānanda’s
                         proclamation at the city gate is followed by the statement, not present in this mahāsūtra version:</p> 
-                        <q>“When Ānanda had spoken these words, there by the blessed buddhas’ power of buddhahood and 
-                            the gods’ power of the gods, the epidemic was quelled.”</q>
+                        <q>
+                        <p tid="118">“When Ānanda had spoken these words, there by the blessed buddhas’ power of buddhahood and 
+                            the gods’ power of the gods, the epidemic was quelled.”</p>
+                    </q>
                     <milestone unit="chunk" xml:id="UT22084-072-012-14"/>
                     <p tid="11">The words that the Buddha instructs Ānanda to pronounce at the city gates can be grouped into three main
                         categories: (1) commands mainly addressed to nonhuman beings to depart, disperse, and stop causing harm, backed up
