--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -42,7 +42,7 @@
                                         Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-22T14:06:39.702Z" user="admin">22/03/2023 14:06:39</note>
+                                <note type="lastUpdated" date-time="2023-03-29T09:54:18.856Z" user="admin">29/03/2023 09:54:18</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -146,6 +146,7 @@
                                         (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:06:35.544Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:06:35.544Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-03-29T09:54:15.984Z" user="andre">Glossary matching corrected and activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -183,8 +184,6 @@
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
-                                <milestone unit="chunk" xml:id="UT22084-089-002-4"/>
-                                <lb/>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
@@ -397,7 +396,7 @@
                                                 2008.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-089-002-45">
