--- a/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -18,11 +18,11 @@
                 <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2019</date>
+                <edition>v 0.1.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-091-062"/>
                 <date/>
             </publicationStmt>
@@ -47,13 +47,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T08:22:33.736Z" user="admin">10/05/2021 08:22:33</note>
+                <note type="lastUpdated" date-time="2023-03-29T12:30:26.648Z" user="admin">29/03/2023 12:30:26</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:05:20.372Z" user="john">v 0.1.0</note>
 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:05:20.372Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T08:22:13.213Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:22:28.94Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:22:28.94Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
