--- a/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmaka</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Four Points</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmaka</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">caturdharmakasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-47"/>
-                <author role="translatorEng" ref="contributors.xml#person-258">Adam Pearcey</author>
+                <author role="translatorMain" ref="eft:team-47"/>
+                <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-066-008"/>
                 <date/>
             </publicationStmt>
@@ -31,17 +32,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T15:51:24.429Z" user="admin">15/03/2023 15:51:24</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:57:53.875Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-08T07:58:11.465Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">2.h</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2023-03-29T13:27:45.373Z" user="admin">29/03/2023 13:27:45</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:57:53.875Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-08T07:58:11.465Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-15T15:51:52.33Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-29T13:27:40.959Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-29T13:27:40.959Z" user="line-tofte">Auto (update-publication-status)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
