--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -4,19 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmakasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Four Precepts</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos bzhi pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmakasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacaturdharmaka­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-47"/>
-                <author role="translatorEng" ref="contributors.xml#person-258">Adam Pearcey</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos bzhi pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-47"/>
+                <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -32,17 +33,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T15:52:22.78Z" user="admin">15/03/2023 15:52:22</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-08T07:59:20.619Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">2.h</note>
-
-    <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2023-03-29T13:28:43.6Z" user="admin">29/03/2023 13:28:43</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-08T07:59:20.619Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-15T15:52:50.134Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-29T13:28:39.188Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-29T13:28:39.188Z" user="line-tofte">Auto (update-publication-status)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
