--- a/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -5,16 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title xml:lang="en" type="mainTitle">An Explanation of the Noble Sūtra The Four Dharmas</title>
-                <title xml:lang="bo" type="mainTitle">འཕགས་པ་ཆོས་བཞི་པའི་རྣམ་པར་བཤད་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">'phags pa chos bzhi pa'i rnam par bshad pa/</title>
+                <title xml:lang="bo" type="mainTitle">འཕགས་པ་ཆོས་བཞི་པའི་རྣམ་པར་བཤད་པ།</title>
                 <author role="translatorMain" ref="eft:team-47"/>
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT23703-113-010"/>
                 <date/>
             </publicationStmt>
@@ -31,8 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T15:53:17.972Z" user="admin">15/03/2023 15:53:17</note>
-                <note type="title" date-time="2022-01-14T11:45:17.141Z" user="john">The Tōhoku catalogue conflates this text with the following one.</note>
+                <note type="lastUpdated" date-time="2023-03-29T13:29:53.692Z" user="admin">29/03/2023 13:29:53</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3981-4019_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
@@ -46,6 +46,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-03T10:19:05.33Z" user="andre">Auto (entity-merge-attribution)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:53:13.75Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-15T15:53:13.75Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-15T15:54:07.249Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-29T13:29:49.286Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-29T13:29:49.286Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
