--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -16,11 +16,11 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2019</date>
+                <edition>v 0.1.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -36,13 +36,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T14:14:15.409Z" user="admin">08/08/2022 14:14:15</note>
+                <note type="lastUpdated" date-time="2023-03-29T14:32:47.374Z" user="admin">29/03/2023 14:32:47</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2022-08-08T14:13:39.003Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.3" date-time="2022-08-08T14:14:07.378Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
