--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -19,11 +19,11 @@
                 <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2019</date>
+                <edition>v 0.1.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -48,13 +48,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:06.961Z" user="celso">23/09/2021 17:35:06</note>
+                <note type="lastUpdated" date-time="2023-03-29T14:35:46.014Z" user="admin">29/03/2023 14:35:46</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T09:53:36.891Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T09:53:51.865Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T09:53:51.865Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
