--- a/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
+++ b/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
@@ -20,10 +20,10 @@
                 <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-101-151"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                         <volume number="101" start-page="524" end-page="531"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
-                    <idno source-id="O1JC114941JC12860" work="W22084"/>
+                    <idno source-id="O1JC114941JC12859" work="W22084"/>
                 </bibl>
                 <bibl key="toh4377" type="text">
                     <ref>Toh 4377</ref>
@@ -49,13 +49,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T11:29:15.627Z" user="admin">15/03/2023 11:29:15</note>
+                <note type="lastUpdated" date-time="2023-03-30T09:15:26.157Z" user="admin">30/03/2023 09:15:26</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:05.65Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-22T15:24:46.374Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-15T11:29:12.822Z" user="john">0.0.3</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-03-30T09:15:21.872Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-30T09:15:21.872Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
