--- a/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
+++ b/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
@@ -17,10 +17,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-076-008"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:05:05.719Z" user="admin">02/08/2022 10:05:05</note>
+                <note type="lastUpdated" date-time="2023-03-30T09:29:46.754Z" user="admin">30/03/2023 09:29:46</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:04:20.283Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T10:04:58.067Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-03-30T09:29:42.482Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-30T09:29:42.482Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
