--- a/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -16,10 +16,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-076-009"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:07:43.721Z" user="admin">02/08/2022 10:07:43</note>
+                <note type="lastUpdated" date-time="2023-03-30T09:32:13.369Z" user="admin">30/03/2023 09:32:13</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:18:04.685Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -47,6 +47,8 @@
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T10:07:36.043Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-03-30T09:32:09.095Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-30T09:32:09.095Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
