--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -18,11 +18,11 @@
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-28T10:16:01.267Z" user="admin">28/11/2022 10:16:01</note>
+                <note type="lastUpdated" date-time="2023-03-30T12:46:21.487Z" user="admin">30/03/2023 12:46:21</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-08T11:50:12.797Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T10:15:57.085Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-28T10:15:57.085Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-30T12:46:17.188Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-30T12:46:17.188Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
