--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-062-005"/>
                 <date/>
             </publicationStmt>
@@ -37,11 +37,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-02T13:41:37.495Z" user="admin">02/12/2022 13:41:37</note>
+                <note type="lastUpdated" date-time="2023-03-30T12:47:33.651Z" user="admin">30/03/2023 12:47:33</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-02T13:41:31.882Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-30T12:47:29.351Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-30T12:47:29.351Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
