--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -4,18 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mchod rten bskor ba'i tshigs bcad/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caityapradakṣiṇagāthā</title>
                 <title type="mainTitle" xml:lang="en">Verses on Circumambulating Reliquaries</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">caityapradakṣiṇagāthā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mchod rten bskor ba'i tshigs bcad/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mchod rten bskor ba'i tshigs su bcad pa</title>
-                <author role="translatorMain" ref="contributors.xml#team-27"/>
+                <author role="translatorMain" ref="eft:team-27"/>
+                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -31,9 +36,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-20T15:04:10.992Z" user="admin">20/03/2023 15:04:10</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-03-31T07:22:48.836Z" user="admin">31/03/2023 07:22:48</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-20T15:05:15.843Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-03-31T07:22:44.548Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-31T07:22:44.548Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
