--- a/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
@@ -24,7 +24,7 @@
         <sponsor ref="eft:sponsor-206">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -58,7 +58,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-03-23T17:39:10.93Z" user="admin">23/03/2023 17:39:10</note>
+        <note type="lastUpdated" date-time="2023-04-03T16:08:52.113Z" user="admin">03/04/2023 16:08:52</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -95,6 +95,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-23T04:30:54.076Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2023-03-23T11:56:45.196Z" user="martina-cotter">updated markup for quote.</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2023-03-23T17:39:08.1Z" user="konchog">Inserted missing space at 1.26</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-03T16:08:49.185Z" user="martina-cotter">Updated glossary entries.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -630,7 +631,7 @@
               actions” or “[beings] become their own actions” (<foreign xml:lang="Bo-Ltn" type="quote">sems can rnams bdag gi las las su gyur ba</foreign>). The terms given
               in the Tibetan translation do not follow the standard translation equivalents given in
               Mvy (Sakaki 2313): <foreign xml:lang="Bo-Ltn" type="term">las bdag gyir byed
-                pa</foreign> for <foreign xml:lang="Sa-Ltn" type="term">karmasvakaḥ</foreign>.</note> <term ref="UT22084-072-038-848">they originate from their actions</term>,<note place="end" xml:id="UT22084-072-038-80"> The Tibetan text deviates from the standard translation
+                pa</foreign> for <foreign xml:lang="Sa-Ltn" type="term">karmasvakaḥ</foreign>.</note> they originate from their actions,<note place="end" xml:id="UT22084-072-038-80"> The Tibetan text deviates from the standard translation
               of <foreign xml:lang="Sa-Ltn" type="term">karmayoniḥ</foreign>, <foreign xml:lang="Bo-Ltn" type="term">las kyi skye gnas pa</foreign> (see Mvy [Sakaki
               2315]). Also, the order in which the terms are presented differs from the Sanskrit
               editions, where <foreign xml:lang="Sa-Ltn" type="term">karmadāyāda</foreign> (see <ptr target="#UT22084-072-038-81"/>) stands before <foreign xml:lang="Sa-Ltn" type="term">karmayoni</foreign> (Lévi 1932, p. 30; Kudo 2004, pp. 26 and 27).</note>
@@ -650,7 +651,7 @@
               III, 203,4–6): <foreign xml:lang="Sa-Ltn" type="quote">Kammassakā, māṇava, sattā
                 kammadāyādā kammayonī kammabandhū kammapaṭisaraṇā. Kammaṃ satte vibhajati yad idaṃ
                 hīnappaṇītatāyāti</foreign>. See Bhikkhu Ñāṇamoli and Bhikkhu Bodhi 2009, p. 1053:
-              “Student, beings are owners of their actions, heirs of their actions; <term ref="UT22084-072-038-848">they originate from their actions</term>, are bound to their actions, have their actions as their refuge. It
+              “Student, beings are owners of their actions, heirs of their actions; they originate from their actions, are bound to their actions, have their actions as their refuge. It
               is action that distinguishes beings as inferior and superior.”</note>
             <!--[809]--> In this way, son, beings are divided into high, middle, and low in terms of
             their actions. </p>
@@ -3471,7 +3472,7 @@
               confidence.” </note>
                     </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-642"/>
-          <p tid="263">“Brahmin youth, it is like this: beings are owners of their own actions, <term ref="UT22084-072-038-848">they originate from their actions</term>, they are heirs of their actions, and they take action as
+          <p tid="263">“Brahmin youth, it is like this: beings are owners of their own actions, they originate from their actions, they are heirs of their actions, and they take action as
             their refuge. Beings are divided into high, middle, and low by their actions. From now
             on, honor what I have said!” </p>
           <milestone unit="chunk" xml:id="UT22084-072-038-643"/>
@@ -4469,17 +4470,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-038-807">
-              <term>four bases of magic powers</term>
-              <term xml:lang="Bo-Ltn">rdzu ’phrul gyi rkang pa </term>
-              <term xml:lang="bo">རྫུ་འཕྲུལ་གྱི་རྐང་པ།</term>
-              <term xml:lang="Sa-Ltn">ṛddhipāda</term>
-              <term type="definition">Four (supernatural) qualities or powers of the mind that help
-                to gain the fruit of the path. They are aspiration (Skt. <foreign xml:lang="Sa-Ltn" type="term">chanda</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">’dun
-                  pa</foreign>), effort (Skt. <foreign xml:lang="Sa-Ltn" type="term">vīrya</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">brtson
-                ’grus</foreign>), concentration (lit. “thought, attitude”: Skt. <foreign xml:lang="Sa-Ltn" type="term">citta</foreign>; Tibetan <foreign xml:lang="Bo-Ltn" type="term">bsam pa</foreign>), and analysis (Skt. <foreign xml:lang="Sa-Ltn" type="term">mīmāṃsā</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">dpyod
-                  pa</foreign>). </term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-807" type="term" mode="match">
+                            <term>bases of magic powers</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">rdzu ’phrul gyi rkang pa</term>
+                            <term xml:lang="bo" type="sourceAttested">རྫུ་འཕྲུལ་གྱི་རྐང་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ṛddhipāda</term>
+                            <term type="definition">Four (supernatural) qualities or powers of the mind that help to gain the fruit of the path. They are aspiration (Skt. <foreign xml:lang="Sa-Ltn" type="term">chanda</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">’dun pa</foreign>), effort (Skt. <foreign xml:lang="Sa-Ltn" type="term">vīrya</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">brtson ’grus</foreign>), concentration (lit. “thought, attitude”: Skt. <foreign xml:lang="Sa-Ltn" type="term">citta</foreign>; Tibetan <foreign xml:lang="Bo-Ltn" type="term">bsam pa</foreign>), and analysis (Skt. <foreign xml:lang="Sa-Ltn" type="term">mīmāṃsā</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">dpyod pa</foreign>). </term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-038-808">
@@ -4918,11 +4915,12 @@
             </gloss>
                     </item>
           <item>
-                        <gloss mode="marked" type="term" xml:id="UT22084-072-038-848">
+                        <gloss type="term" xml:id="UT22084-072-038-848">
             <term>those who originate from their actions</term>
               <term xml:lang="Bo-Ltn">las kyi rgyu las skyes pa </term>
               <term xml:lang="bo">ལས་ཀྱི་རྒྱུ་ལས་སྐྱེས་པ།</term>
               <term xml:lang="Sa-Ltn">karmayoni</term>
+              <term type="alternative">originate from their actions</term>
             </gloss>
                     </item>
           <item>
@@ -4950,11 +4948,12 @@
               <term type="definition">The highest class of gods of the Pure Abodes (<foreign xml:lang="Sa-Ltn" type="term">Śuddhāvāsa</foreign>) in the world of form (<foreign xml:lang="Sa-Ltn" type="term">rūpadhātu</foreign>); non-returners and those who
                 have mastered the fourth <foreign xml:lang="Sa-Ltn" type="term">dhyāna</foreign> are
                 reborn in the Pure Abodes.</term>
+            <term type="alternative">Highest Heaven</term>
             </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-038-852">
-            <term>Highest Heaven</term>
+            <term>Perfect Virtue</term>
               <term xml:lang="Bo-Ltn">dge rgyas kyi lha rnams </term>
               <term xml:lang="bo">དགེ་རྒྱས་ཀྱི་ལྷ་རྣམས།</term>
             <term xml:lang="Sa-Ltn">Śubhakṛtsna </term>
@@ -5402,13 +5401,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-038-891">
-              <term>vanity</term>
-              <term xml:lang="Bo-Ltn">pho theg </term>
-              <term xml:lang="bo">ཕོ་ཐེག</term>
-              <term xml:lang="Sa-Ltn">stabdhatā</term>
-            <term type="definition">An Old Tibetan expression for <foreign xml:lang="Bo-Ltn" type="term">khengs pa</foreign> (“<term type="ignore">arrogance</term>”).</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-891" type="term" mode="match">
+                            <term>vanity</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">pho theg</term>
+                            <term xml:lang="bo" type="sourceAttested">ཕོ་ཐེག</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">stabdhatā</term>
+                            <term type="definition">An old Tibetan expression for <foreign xml:lang="Bo-Ltn" type="term">khengs pa</foreign> (“<term type="ignore">arrogance</term>”).</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-038-893">
@@ -5604,15 +5603,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="person" xml:id="UT22084-072-038-914">
-              <term>Jaṅghākāśyapa </term>
-              <term xml:lang="Bo-Ltn">’dzang ga ka shas </term>
-              <term xml:lang="bo">འཛང་ག་ཀ་ཤས།</term>
-              <term xml:lang="Sa-Ltn">Jaṅghākāśyapa </term>
-              <term type="definition">The identity of this person is unknown. In Benares he offered
-                a meal to a pratyekabuddha, but only after the appropriate mealtime had
-                passed.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-914" type="person" mode="match">
+                            <term>Jaṅghākāśyapa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’dzang ga ka shas</term>
+                            <term xml:lang="bo" type="sourceAttested">འཛང་ག་ཀ་ཤས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jaṅghākāśyapa</term>
+                            <term type="definition">The identity of this person is unknown. In Benares he offered a meal to a pratyekabuddha, but only after the appropriate mealtime had passed; due to that, when he became a noble person himself, he arrived too late to obtain any food during the morning alms round.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-072-038-915">
@@ -6108,6 +6105,7 @@
               <term xml:lang="Bo-Ltn">kas mar+ya </term>
               <term xml:lang="bo">ཀས་མརྱ།</term>
               <term xml:lang="Sa-Ltn">Kāśmīr</term>
+            <term type="alternative">Kāśmīr</term>
             </gloss>
                     </item>
           <item>
@@ -6234,7 +6232,7 @@
                     </item>
           <item>
                         <gloss mode="marked" type="text" xml:id="UT22084-072-038-976">
-              <term>Śatavarga-āgama Karmavibhaṅgasūtra</term>
+            <term>Śatavarga-āgama Karmavibhaṅga­sūtra</term>
               <term xml:lang="Bo-Ltn">brgya bsdus pa’i mdo </term>
               <term xml:lang="bo">བརྒྱ་བསྡུས་པའི་མདོ།</term>
               <term xml:lang="Sa-Ltn">Śatavargāgamakarmavibhaṅgasūtra</term>
@@ -6261,10 +6259,10 @@
                     </item>
           <item>
                         <gloss type="text" xml:id="UT22084-072-038-978">
-            <term>Śrāmaṇyaphalasūtra</term>
+            <term>Śrāmaṇyaphala­sūtra</term>
               <term xml:lang="Bo-Ltn">dge sbyong gi ’bras bu’i mdo </term>
                             <term xml:lang="bo">དགེ་སྦྱོང་གི་འབྲས་བུའི་མདོ།</term>
-              <term xml:lang="Sa-Ltn">Śrāmaṇyaphalasūtra</term>
+            <term xml:lang="Sa-Ltn">Śrāmaṇyaphala­sūtra</term>
               <term type="definition">No complete Sanskrit version of this sūtra is known (see Kudo
                 2004, p. 250, n. 22, for a summary of extant versions of this sūtra and further
                 readings).</term>
