--- a/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
+++ b/translations/kangyur/placeholders/101-151_toh1095,4377-the_prayer_of_good_action.xml
@@ -18,12 +18,13 @@
                 <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
                 <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-101-151"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +50,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-30T09:15:26.157Z" user="admin">30/03/2023 09:15:26</note>
+                <note type="lastUpdated" date-time="2023-04-04T08:47:20.483Z" user="admin">04/04/2023 08:47:20</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:05.65Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">2.f</note>
@@ -58,6 +59,9 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-15T11:29:12.822Z" user="john">0.0.3</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-03-30T09:15:21.872Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-30T09:15:21.872Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-30T09:16:37.767Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-04-04T08:47:16.188Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-04T08:47:16.188Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
