--- a/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
+++ b/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
@@ -27,7 +27,7 @@
                 <sponsor ref="sponsors.xml#sponsor-46">a sponsor who wishes to remain anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.11.21 <date>2022</date>
+                <edition>v 1.11.22 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-26T20:23:31.231Z" user="admin">26/01/2023 20:23:31</note>
+                <note type="lastUpdated" date-time="2023-04-04T10:22:02.97Z" user="admin">04/04/2023 10:22:02</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-04-09T12:05:18.46Z" user="andre">v 1.12 2018</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-11T17:30:17.63Z" user="andre">2</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-04-12T09:10:50.828Z" user="andre">2.a</note>
@@ -104,6 +104,7 @@
                 <note type="updated" update="text-version" value="1.11.19" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.11.20" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.11.21" date-time="2023-01-26T20:23:28.088Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
+                <note type="updated" update="text-version" value="1.11.22" date-time="2023-04-04T10:21:59.8Z" user="martina-cotter">Edited typos.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -8146,7 +8147,7 @@
                         <milestone unit="chunk" xml:id="UT22084-079-008-1290"/>
                         <lg tid="993">
                             <l>“The head is the land of Malaya;</l>
-                            <l>The topknot is Jālandhara.’</l>
+                            <l>The topknot is Jālandhara.</l>
                             <l>Uḍḍiyāna, for its part,</l>
                             <l>Is said to be in the right ear. {6.1.46}</l>
                         </lg>
@@ -8197,7 +8198,7 @@
                             <l>“These two are called <foreign xml:lang="Sa-Ltn" type="term">chandoha</foreign>.</l>
                             <l>Kāñci is said to be in the heart;</l>
                             <l>The phallus is Himālaya.</l>
-                            <l>Thse two are called <emph>auxiliary chandohas</emph>. {6.1.52}</l>
+                            <l>These two are called <emph>auxiliary chandohas</emph>. {6.1.52}</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-079-008-1299"/>
                         <lg tid="1000">
